[package]
name = "hyperstone"
version = "0.0.1"
authors = ["Fangdun Tsai <cfddream@gmail.com>"]
edition = "2018"
description = "A mystical, carved stone that boosts the fervor of the holder."
repository = "https://github.com/viz-rs/hyperstone"
documentation = "https://github.com/viz-rs/hyperstone/"
readme = "README.md"
keywords = ["http", "web", "hyper"]
license = "MIT/Apache-2.0"

[features]
default = ["query", "cookie", "json", "form", "multipart", "tcp", "http1"]

json = ["serde", "serde_json"]
form = ["serde", "serde_urlencoded"]
query = ["serde", "serde_urlencoded"]
multipart = ["form-data"]
ws = ["tokio-tungstenite"]
sse = []

tcp = ["hyper/tcp"]
uds = ["tokio/net"]

http1 = ["hyper/http1"]
http2 = ["hyper/http2"]

[dependencies]
anyhow = "1.0.47"
async-trait = "0.1.51"
path-tree = "0.2.2"
futures-util = "0.3.17"

hyper = { version = "0.14.15", features = ["server", "stream"] }

bytes = "1.1.0"
mime = "0.3.16"
form-data = { version = "0.3.2", optional = true }
serde = { version = "1.0.130", optional = true }
serde_json = { version = "1.0.81", optional = true }
serde_urlencoded = { version = "0.7.0", optional = true }
cookie = { version = "0.15.1", features = ["percent-encode"], optional = true }

tokio-tungstenite = { version = "0.16.0", optional = true }

tower-service = "0.3.1"
tower-layer = "0.3.1"
tower-http = { version = "0.1.2", features = ["auth", "trace"] }

tokio = { version = "1.14", default-features = false, features = ["net"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing-subscriber = "0.3.1"
